# cs267-final-project

./: CMakeLists.txt
algorithms/: CMakeLists.txt
algorithms/HCNNG/CUDA/: Readme.md  common.h  hcnng.cu
algorithms/bench/: neighborsTime.C
algorithms/utils/: beam_search_wrapper.h  cuda_beam_search.h  euclidian_point.h  types.h
algorithms/vamana/: BUILD  CMakeLists.txt  Makefile  Makefile.cuda_test  cuda_euclidean_kernel.cu  cuda_euclidean_kernel.h  cuda_vamana.cu  cuda_vamana.cuh  index.h  output_graph.dot  test_cuda_euclidean.cu  visualize_graph.py
cuda/: Makefile  cuda_distance.cu  cuda_distance.cuh  cuda_hnsw_kernels.cu  cuda_hnsw_kernels.cuh  cuda_l2_space.h  cuda_l2_space_batch.h  cuda_l2_space_simple.h  test_batch_comparison  test_batch_comparison.cpp  test_comparison.cpp  test_cuda.cpp
data/: data_10pts_2D.fbin  data_10pts_graph  small.py
data_tools/: compute_groundtruth  vec_to_bin
docs/: README.md
src/: nnd_cuda.cu  nnd_cuda.cuh  nnd_cuda.h
tests/: cuda_benchmark.cpp  data.py  plot.py  simple.cpp
